# ForexAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  config.py  design_decisions.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
mnt/user-data/outputs/src/agent/: __init__.py
mnt/user-data/outputs/src/api/: __init__.py
mnt/user-data/outputs/src/data/: __init__.py
mnt/user-data/outputs/src/evaluation/: __init__.py
mnt/user-data/outputs/src/models/: __init__.py
mnt/user-data/outputs/src/observability/: __init__.py
src/: __init__.py
src/agent/: __init__.py  forex_agent.py  rag.py  schemas.py
src/api/: __init__.py  main.py  routes.py
src/data/: __init__.py  db.py  features.py  fetcher.py
src/evaluation/: __init__.py  drift.py  evaluator.py
src/models/: __init__.py  base.py  lightgbm_model.py  lstm_model.py  trainer.py
src/observability/: __init__.py  logger.py  metrics.py
tests/: test_smoke.py
