[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "forexagent"
version = "0.1.0"
description = "Production-grade forex trading-signal system combining classical ML and agentic AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stephen Kim", email = "thanh31596@users.noreply.github.com" }]
keywords = [
    "forex",
    "machine-learning",
    "mlops",
    "langchain",
    "langgraph",
    "agentic-ai",
    "fastapi",
    "mlflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "requests>=2.32",
    "ta>=0.11.0",
    # Modelling
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "torch>=2.3",
    # MLOps
    "mlflow>=2.14",
    # Agent
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langgraph>=0.2",
    "chromadb>=0.5",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Storage
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    # Observability
    "python-json-logger>=2.0",
    # Utilities
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "hypothesis>=6.103",
    # Quality
    "black>=24.4",
    "isort>=5.13",
    "flake8>=7.1",
    "mypy>=1.10",
    "pre-commit>=3.7",
    # Lockfile generation
    "uv>=0.4",
    # Dev experience
    "ipython>=8.25",
]
prod = [
    "gunicorn>=22.0",
]

[project.urls]
Repository = "https://github.com/thanh31596/forexagent"
Issues = "https://github.com/thanh31596/forexagent/issues"

[project.scripts]
forex-train = "src.models.trainer:main"
forex-evaluate = "src.evaluation.evaluator:main"

# ---------------------------------------------------------------------------
# Hatch packaging
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "pyproject.toml",
    "Makefile",
]

# ---------------------------------------------------------------------------
# Formatters
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | mlruns
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip = [".venv", "build", "dist", "mlruns"]

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]
exclude = [
    "build/",
    "dist/",
    "mlruns/",
    "\\.venv/",
]

# Third-party libs without complete type stubs.
[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "ta.*",
    "lightgbm.*",
    "mlflow.*",
    "chromadb.*",
    "sklearn.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
    "agent: tests that invoke the LangGraph agent (may hit LLM)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "src/*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
